# mcp-scanner

./: .gitignore  README.md  mcp-scanner-gui.spec  pyproject.toml
.github/workflows/: build-release.yml  python-tests.yml
build_scripts/: gui_launcher.py
docs/: browser-gui.md
docs/superpowers/plans/: 2026-06-17-desktop-gui.md  2026-06-18-multi-provider-llm.md
docs/superpowers/specs/: 2026-06-17-desktop-gui-design.md  2026-06-18-multi-provider-llm-design.md
mcpscanner/: __init__.py
mcpscanner_gui/: __init__.py  __main__.py  app.py  controllers.py  models.py  runner.py  service.py  store.py
mcpscanner_gui/views/: results_view.py  scan_view.py  settings_view.py
mcpscanner_web/: __init__.py  __main__.py  jobs.py  keys.py  launcher.py  noise.py  schemas.py  serialization.py  server.py  updater.py
mcpscanner_web/static/: app.css  app.js  index.html
tests/gui/: test_app.py  test_controllers.py  test_models.py  test_package.py  test_results_view.py  test_runner.py  test_scan_view.py  test_service_files.py  test_service_remote.py  test_settings_view.py  test_store.py
tests/web/: test_api_config.py  test_api_keys_prefs.py  test_api_scan.py  test_api_static.py  test_api_update.py  test_jobs.py  test_keys.py  test_launcher.py  test_noise.py  test_package.py  test_schemas.py  test_serialization.py  test_updater.py
